@@ -1,9 +1,9 @@
 import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 plugins {
-    id 'org.springframework.boot' version '3.2.0'
-    id 'io.spring.dependency-management' version '1.1.4'
-    id "org.sonarqube" version "4.4.1.3373"
+    id 'org.springframework.boot' version '3.3.3' apply false
+    id 'io.spring.dependency-management' version '1.1.6'
+    id "org.sonarqube" version "5.1.0.4882"
     id 'java'
     id 'checkstyle'
     id 'pmd'
@@ -11,9 +11,9 @@ plugins {
 }
 
 ext {
-    jacocoVersion = '0.8.11'
-    checkstyleVersion = "10.3.3"
-    pmdVersion = '6.55.0'
+    jacocoVersion = '0.8.12'
+    checkstyleVersion = "10.18.2"
+    pmdVersion = '7.6.0'
 }
 
 group = 'org.theoriok'
@@ -21,8 +21,11 @@ version = '0.0.1-SNAPSHOT'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(23)
     }
+}
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
 }
 
 repositories {
